--- a/package.json
+++ b/package.json
@@ -11,33 +11,33 @@
   "license": "MIT",
   "repository": "https://github.com/swaggerloaf/react-seedling-basic",
   "dependencies": {
-    "bootstrap": "^4.1.3",
-    "@babel/polyfill":"^7.0.0",
-    "font-awesome": "^4.7.0",
-    "react": "^16.7.0-alpha",
-    "react-dom": "^16.7.0-alpha",
-    "react-redux": "^5.1.0",
+    "@salesforce-ux/design-system":"2.7.5",
+    "@salesforce/design-system-react":"0.9.3",
+    "@babel/polyfill":"^7.2.5",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
+    "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
     "redux-saga": "^0.16.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.1.5",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
-    "@babel/preset-env": "^7.1.5",
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-object-rest-spread": "^7.2.0",
+    "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "^7.0.0",
-    "@types/react": "16.4.18",
-    "@types/react-dom": "16.0.9",
+    "@types/react": "16.7.18",
+    "@types/react-dom": "16.0.11",
     "babel-eslint": "~10.0.1",
     "babel-loader": "^8.0.4",
     "css-loader": "1.0.1",
-    "eslint": "5.8.0",
-    "file-loader": "~2.0.0",
-    "prettier": "^1.14.3",
+    "eslint": "5.11.1",
+    "file-loader": "~3.0.1",
+    "prettier": "^1.15.3",
     "style-loader": "0.23.1",
-    "webpack": "4.25.1",
+    "webpack": "4.28.2",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10"
+    "webpack-dev-server": "^3.1.14"
   },
   "engines": {
     "node": ">=8"
@@ -46,6 +46,7 @@
     "react",
     "redux",
     "babel",
-    "webpack"
+    "webpack",
+    "slds"
   ]
 }
