--- a/package.json
+++ b/package.json
@@ -4,40 +4,47 @@
   "author": "@swaggerloaf",
   "description": "Starter react project using babel, webpack, bootstrap and VS Code",
   "scripts": {
-    "start": "node_modules/.bin/webpack-dev-server",
+    "start": "npm-run-all --parallel start2  start-mockapi",
+    "start2": "node_modules/.bin/webpack-dev-server",
     "build": "node_modules/.bin/webpack --progress",
-    "test": "jest"
+    "test": "jasmine",
+    "generate-mock-data": "node buildScripts/generateMockData",
+    "prestart-mockapi": "npm run generate-mock-data",
+    "start-mockapi": "json-server --watch db.json --port 3001"
   },
   "license": "MIT",
   "repository": "https://github.com/swaggerloaf/react-seedling-basic",
   "dependencies": {
-    "@salesforce-ux/design-system":"2.7.5",
-    "@salesforce/design-system-react":"0.9.3",
-    "@babel/polyfill":"^7.2.5",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
+    "@babel/polyfill": "^7.2.5",
+    "react": "^16.8.1",
+    "react-dom": "^16.8.1",
     "react-redux": "^6.0.0",
-    "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
-    "redux-saga": "^0.16.2"
+    "redux-thunk": "2.3.0",
+    "bootstrap": "4.3.0",
+    "font-awesome": "4.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
-    "@babel/plugin-proposal-object-rest-spread": "^7.2.0",
-    "@babel/preset-env": "^7.2.3",
+    "@babel/plugin-proposal-object-rest-spread": "^7.3.2",
+    "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
-    "@types/react": "16.7.18",
-    "@types/react-dom": "16.0.11",
+    "@types/react": "16.8.2",
+    "@types/react-dom": "16.8.0",
     "babel-eslint": "~10.0.1",
-    "babel-loader": "^8.0.4",
-    "css-loader": "1.0.1",
-    "eslint": "5.11.1",
+    "babel-loader": "^8.0.5",
+    "css-loader": "2.1.0",
+    "node-sass": "4.11.0",
+    "sass-loader": "7.1.0",
+    "eslint": "5.13.0",
     "file-loader": "~3.0.1",
-    "prettier": "^1.15.3",
+    "prettier": "^1.16.4",
     "style-loader": "0.23.1",
-    "webpack": "4.28.2",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.14"
+    "webpack": "4.29.3",
+    "webpack-cli": "^3.2.3",
+    "webpack-dev-server": "^3.1.14",
+    "json-server": "0.14.2",
+    "json-schema-faker":"0.5.0-rc16"
   },
   "engines": {
     "node": ">=8"
