--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@babel/plugin-transform-runtime": "^7.2.0",
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
-    "@types/react": "16.8.2",
+    "@types/react": "16.8.3",
     "@types/react-dom": "16.8.0",
     "babel-eslint": "~10.0.1",
     "babel-loader": "^8.0.5",
@@ -48,7 +48,8 @@
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.1.14",
     "json-server": "0.14.2",
-    "json-schema-faker": "0.5.0-rc16"
+    "json-schema-faker": "0.5.0-rc16",
+    "npm-run-all": "^4.1.5"
   },
   "engines": {
     "node": ">=8"
