--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
   "repository": "https://github.com/swaggerloaf/react-seedling-basic",
   "dependencies": {
     "@babel/polyfill": "^7.2.5",
-    "react": "^16.8.1",
-    "react-dom": "^16.8.1",
+    "react": "^16.8.2",
+    "react-dom": "^16.8.2",
     "react-redux": "^6.0.0",
     "redux": "^4.0.1",
     "redux-thunk": "2.3.0",
@@ -27,14 +27,14 @@
   "devDependencies": {
     "@babel/core": "^7.2.2",
     "@babel/plugin-proposal-decorators": "^7.3.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.2.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.3.2",
     "@babel/plugin-transform-react-display-name": "^7.2.0",
     "@babel/plugin-transform-react-jsx": "^7.3.0",
     "@babel/plugin-transform-runtime": "^7.2.0",
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
     "@types/react": "16.8.3",
-    "@types/react-dom": "16.8.0",
+    "@types/react-dom": "16.8.1",
     "babel-eslint": "~10.0.1",
     "babel-loader": "^8.0.5",
     "css-loader": "2.1.0",
@@ -49,7 +49,11 @@
     "webpack-dev-server": "^3.1.14",
     "json-server": "0.14.2",
     "json-schema-faker": "0.5.0-rc16",
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5",
+    "enzyme": "3.8.0",
+    "jest": "24.1.0",
+    "jest-cli": "24.1.0",
+    "babel-jest": "24.1.0"
   },
   "engines": {
     "node": ">=8"
