--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "jasmine",
     "generate-mock-data": "node buildScripts/generateMockData",
     "prestart-mockapi": "npm run generate-mock-data",
-    "start-mockapi": "json-server --watch db.json --port 3001"
+    "start-mockapi": "json-server --watch db.json --port 3001",
+    "mock": "json-server --watch db.json --port 3001"
   },
   "license": "MIT",
   "repository": "https://github.com/swaggerloaf/react-seedling-basic",
