--- a/package.json
+++ b/package.json
@@ -17,21 +17,26 @@
   "repository": "https://github.com/swaggerloaf/react-seedling-basic",
   "dependencies": {
     "@babel/polyfill": "^7.2.5",
-    "react": "^16.8.2",
-    "react-dom": "^16.8.2",
-    "react-redux": "^6.0.0",
-    "redux": "^4.0.1",
+    "bootstrap": "4.2.1",
+    "immer": "1.9.3",
+    "prop-types": "15.6.2",
+    "react": "next",
+    "react-dom": "next",
+    "react-redux": "6.0.0",
+    "react-router-dom": "next",
+    "react-toastify": "4.5.1",
+    "redux": "4.0.1",
     "redux-thunk": "2.3.0",
-    "bootstrap": "4.3.1",
+    "reselect": "4.0.0",
     "font-awesome": "4.7.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/plugin-proposal-decorators": "^7.3.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.3.2",
-    "@babel/plugin-transform-react-display-name": "^7.2.0",
-    "@babel/plugin-transform-react-jsx": "^7.3.0",
-    "@babel/plugin-transform-runtime": "^7.2.0",
+    "@babel/core": "7.2.2",
+    "@babel/plugin-proposal-class-properties": "7.2.3",
+    "@babel/plugin-syntax-dynamic-import": "7.2.0",
+    "@babel/plugin-transform-runtime": "7.2.0",
+    "@babel/preset-react": "7.0.0",
+    "@babel/register": "7.0.0",
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
     "@types/react": "16.8.3",
@@ -64,6 +69,11 @@
     "redux",
     "babel",
     "webpack",
-    "slds"
-  ]
+    "jest"
+  ],
+  "jest": {
+    "setupFiles": [
+      "./tools/testSetup.js"
+    ]
+  }
 }
