--- a/package.json
+++ b/package.json
@@ -17,18 +17,18 @@
   "repository": "https://github.com/swaggerloaf/react-seedling-basic",
   "dependencies": {
     "@babel/polyfill": "^7.2.5",
-    "bootstrap": "4.2.1",
-    "immer": "1.9.3",
-    "prop-types": "15.6.2",
+    "bootstrap": "^4.3.1",
+    "immer": "^2.0.0",
+    "prop-types": "^15.7.2",
     "react": "next",
     "react-dom": "next",
     "react-redux": "6.0.0",
     "react-router-dom": "next",
-    "react-toastify": "4.5.1",
-    "redux": "4.0.1",
-    "redux-thunk": "2.3.0",
+    "react-toastify": "4.5.2",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
     "reselect": "4.0.0",
-    "font-awesome": "4.7.0"
+    "font-awesome": "^4.7.0"
   },
   "devDependencies": {
     "@babel/core": "7.2.2",
