--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "prop-types": "^15.7.2",
     "react": "next",
     "react-dom": "next",
-    "react-redux": "6.0.0",
+    "react-redux": "6.0.1",
     "react-router-dom": "next",
     "react-toastify": "4.5.2",
     "redux": "^4.0.1",
@@ -31,32 +31,32 @@
     "font-awesome": "^4.7.0"
   },
   "devDependencies": {
-    "@babel/core": "7.2.2",
-    "@babel/plugin-proposal-class-properties": "7.2.3",
+    "@babel/core": "7.3.3",
+    "@babel/plugin-proposal-class-properties": "7.3.3",
     "@babel/plugin-syntax-dynamic-import": "7.2.0",
     "@babel/plugin-transform-runtime": "7.2.0",
     "@babel/preset-react": "7.0.0",
     "@babel/register": "7.0.0",
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
-    "@types/react": "16.8.3",
-    "@types/react-dom": "16.8.1",
+    "@types/react": "16.8.4",
+    "@types/react-dom": "16.8.2",
     "babel-eslint": "~10.0.1",
     "babel-loader": "^8.0.5",
     "css-loader": "2.1.0",
     "node-sass": "4.11.0",
     "sass-loader": "7.1.0",
-    "eslint": "5.13.0",
+    "eslint": "5.14.1",
     "file-loader": "~3.0.1",
     "prettier": "^1.16.4",
     "style-loader": "0.23.1",
-    "webpack": "4.29.3",
+    "webpack": "4.29.5",
     "webpack-cli": "^3.2.3",
-    "webpack-dev-server": "^3.1.14",
+    "webpack-dev-server": "^3.2.0",
     "json-server": "0.14.2",
     "json-schema-faker": "0.5.0-rc16",
     "npm-run-all": "^4.1.5",
-    "enzyme": "3.8.0",
+    "enzyme": "3.9.0",
     "jest": "24.1.0",
     "jest-cli": "24.1.0",
     "babel-jest": "24.1.0"
@@ -71,9 +71,57 @@
     "webpack",
     "jest"
   ],
+  "eslintConfig": {
+    "extends": [
+      "eslint:recommended",
+      "plugin:react/recommended",
+      "plugin:import/errors",
+      "plugin:import/warnings"
+    ],
+    "parser": "babel-eslint",
+    "parserOptions": {
+      "ecmaVersion": 2018,
+      "sourceType": "module",
+      "ecmaFeatures": {
+        "jsx": true
+      }
+    },
+    "env": {
+      "browser": true,
+      "node": true,
+      "es6": true,
+      "jest": true
+    },
+    "rules": {
+      "no-debugger": "off",
+      "no-console": "off",
+      "no-unused-vars": "warn",
+      "react/prop-types": "warn"
+    },
+    "settings": {
+      "react": {
+        "version": "detect"
+      }
+    }
+  },
+  "babel": {
+    "presets": [
+      "@babel/preset-env",
+      "@babel/preset-react"
+    ],
+    "plugins": [
+      "@babel/plugin-syntax-dynamic-import",
+      "@babel/plugin-proposal-class-properties",
+      "@babel/plugin-transform-runtime"
+    ]
+  },
   "jest": {
     "setupFiles": [
       "./tools/testSetup.js"
-    ]
+    ],
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/tools/fileMock.js",
+      "\\.(css|less)$": "<rootDir>/tools/styleMock.js"
+    }
   }
 }
