--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "dependencies": {
     "@babel/polyfill": "^7.2.5",
     "bootstrap": "^4.3.1",
-    "immer": "^2.0.0",
+    "immer": "^2.1.1",
     "prop-types": "^15.7.2",
     "react": "next",
     "react-dom": "next",
@@ -31,35 +31,35 @@
     "font-awesome": "^4.7.0"
   },
   "devDependencies": {
-    "@babel/core": "7.3.3",
-    "@babel/plugin-proposal-class-properties": "7.3.3",
-    "@babel/plugin-syntax-dynamic-import": "7.2.0",
-    "@babel/plugin-transform-runtime": "7.2.0",
-    "@babel/preset-react": "7.0.0",
-    "@babel/register": "7.0.0",
-    "@babel/preset-env": "^7.3.1",
-    "@babel/preset-react": "^7.0.0",
-    "@types/react": "16.8.4",
-    "@types/react-dom": "16.8.2",
+    "@babel/core": "~7.3.4",
+    "@babel/plugin-proposal-class-properties": "~7.3.4",
+    "@babel/plugin-syntax-dynamic-import": "~7.2.0",
+    "@babel/plugin-transform-runtime": "~7.3.4",
+    "@babel/preset-react": "~7.0.0",
+    "@babel/register": "~7.0.0",
+    "@babel/preset-env": "~7.3.4",
+    "@types/react": "~16.8.7",
+    "@types/react-dom": "~16.8.2",
     "babel-eslint": "~10.0.1",
     "babel-loader": "^8.0.5",
-    "css-loader": "2.1.0",
-    "node-sass": "4.11.0",
+    "css-loader": "~2.1.1",
+    "node-sass": "~4.11.0",
     "sass-loader": "7.1.0",
-    "eslint": "5.14.1",
+    "eslint": "~5.15.1",
     "file-loader": "~3.0.1",
     "prettier": "^1.16.4",
-    "style-loader": "0.23.1",
-    "webpack": "4.29.5",
+    "style-loader": "~0.23.1",
+    "webpack": "~4.29.6",
     "webpack-cli": "^3.2.3",
-    "webpack-dev-server": "^3.2.0",
-    "json-server": "0.14.2",
-    "json-schema-faker": "0.5.0-rc16",
+    "webpack-dev-server": "^3.2.1",
+    "webpack-bundle-analyzer":"~3.1.0",
+    "json-server": "~0.14.2",
+    "json-schema-faker": "~0.5.0-rc16",
     "npm-run-all": "^4.1.5",
-    "enzyme": "3.9.0",
-    "jest": "24.1.0",
-    "jest-cli": "24.1.0",
-    "babel-jest": "24.1.0"
+    "enzyme": "~3.9.0",
+    "jest": "~24.3.1",
+    "jest-cli": "~24.3.1",
+    "babel-jest": "~24.3.1"
   },
   "engines": {
     "node": ">=8"
