--- a/package.json
+++ b/package.json
@@ -46,20 +46,23 @@
     "node-sass": "~4.11.0",
     "sass-loader": "7.1.0",
     "eslint": "~5.15.1",
+    "eslint-plugin-react-hooks": "~1.5.0",
     "file-loader": "~3.0.1",
     "prettier": "^1.16.4",
     "style-loader": "~0.23.1",
     "webpack": "~4.29.6",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.2.1",
-    "webpack-bundle-analyzer":"~3.1.0",
+    "webpack-bundle-analyzer": "~3.1.0",
     "json-server": "~0.14.2",
     "json-schema-faker": "~0.5.0-rc16",
     "npm-run-all": "^4.1.5",
     "enzyme": "~3.9.0",
     "jest": "~24.3.1",
     "jest-cli": "~24.3.1",
-    "babel-jest": "~24.3.1"
+    "jest-haste-map": "^24.3.1",
+    "jest-resolve": "^24.3.1",
+    "babel-jest": "^24.3.1"
   },
   "engines": {
     "node": ">=8"
@@ -72,6 +75,9 @@
     "jest"
   ],
   "eslintConfig": {
+    "plugins": [
+      "react-hooks"
+    ],
     "extends": [
       "eslint:recommended",
       "plugin:react/recommended",
@@ -96,7 +102,9 @@
       "no-debugger": "off",
       "no-console": "off",
       "no-unused-vars": "warn",
-      "react/prop-types": "warn"
+      "react/prop-types": "warn",
+      "react-hooks/rules-of-hooks": "error",
+      "react-hooks/exhaustive-deps": "warn"
     },
     "settings": {
       "react": {
