--- a/package.json
+++ b/package.json
@@ -4,19 +4,14 @@
   "author": "@swaggerloaf",
   "description": "Starter react project using babel, webpack, bootstrap and VS Code",
   "scripts": {
-    "start": "npm-run-all --parallel start2  start-mockapi",
-    "start2": "node_modules/.bin/webpack-dev-server",
+    "start": "node_modules/.bin/webpack-dev-server",
     "build": "node_modules/.bin/webpack --progress",
-    "test": "jasmine",
-    "generate-mock-data": "node buildScripts/generateMockData",
-    "prestart-mockapi": "npm run generate-mock-data",
-    "start-mockapi": "json-server --watch db.json --port 3001",
-    "mock": "json-server --watch db.json --port 3001"
+    "test": "jasmine"
   },
   "license": "MIT",
   "repository": "https://github.com/swaggerloaf/react-seedling-basic",
   "dependencies": {
-    "@babel/polyfill": "^7.2.5",
+    "@babel/runtime": "^7.2.5",
     "bootstrap": "^4.3.1",
     "immer": "^2.1.1",
     "prop-types": "^15.7.2",
@@ -27,7 +22,6 @@
     "react-toastify": "4.5.2",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
-    "reselect": "4.0.0",
     "font-awesome": "^4.7.0"
   },
   "devDependencies": {
@@ -53,17 +47,7 @@
     "webpack": "~4.29.6",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.2.1",
-    "webpack-bundle-analyzer": "~3.1.0",
-    "json-server": "~0.14.2",
-    "json-schema-faker": "~0.5.0-rc16",
-    "npm-run-all": "^4.1.5",
-    "enzyme": "~3.9.0",
-    "jest": "~24.3.1",
-    "jest-cli": "~24.3.1",
-    "jest-haste-map": "^24.3.1",
-    "jest-resolve": "^24.3.1",
-    "babel-jest": "^24.3.1"
-  },
+    "webpack-bundle-analyzer": "~3.1.0"  },
   "engines": {
     "node": ">=8"
   },
@@ -71,8 +55,7 @@
     "react",
     "redux",
     "babel",
-    "webpack",
-    "jest"
+    "webpack"
   ],
   "eslintConfig": {
     "plugins": [
@@ -122,14 +105,5 @@
       "@babel/plugin-proposal-class-properties",
       "@babel/plugin-transform-runtime"
     ]
-  },
-  "jest": {
-    "setupFiles": [
-      "./tools/testSetup.js"
-    ],
-    "moduleNameMapper": {
-      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/tools/fileMock.js",
-      "\\.(css|less)$": "<rootDir>/tools/styleMock.js"
-    }
   }
 }
