--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "license": "MIT",
   "repository": "https://github.com/swaggerloaf/react-seedling-basic",
   "dependencies": {
-    "@babel/runtime": "^7.2.5",
-    "bootstrap": "^4.3.1",
+    "@babel/runtime": "^7.3.4",
     "immer": "^2.1.1",
     "prop-types": "^15.7.2",
     "react": "next",
@@ -21,8 +20,7 @@
     "react-router-dom": "next",
     "react-toastify": "4.5.2",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0",
-    "font-awesome": "^4.7.0"
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "~7.3.4",
@@ -47,7 +45,8 @@
     "webpack": "~4.29.6",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.2.1",
-    "webpack-bundle-analyzer": "~3.1.0"  },
+    "webpack-bundle-analyzer": "~3.1.0"
+  },
   "engines": {
     "node": ">=8"
   },
