--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react-router-dom": "next",
     "react-toastify": "4.5.2",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0",
+    "bootstrap": "^4.3.1"
   },
   "devDependencies": {
     "@babel/core": "~7.3.4",
@@ -35,6 +37,7 @@
     "babel-eslint": "~10.0.1",
     "babel-loader": "^8.0.5",
     "css-loader": "~2.1.1",
+    "cssnano": "4.1.10",
     "node-sass": "~4.11.0",
     "sass-loader": "7.1.0",
     "eslint": "~5.15.1",
